--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header class="header">
     <div class="nav_links">
       <div class="brand0">
-        <a href="#" class="logo"><img src="images1/logo.png" alt=" logo"></a>
+        <a href="/" class="logo"><img src="images1/logo.png" alt=" logo"></a>
         <p>SAFEZONE ACTIVE HUMANITY FOUNDATION</p>
       </div>
       <input type="checkbox" id="menu">
@@ -37,7 +37,7 @@
       </label>
       <nav class="navbar" id="navbarid">
         <div class="brand1">
-          <a href="#" class="logo"><img src="images1/logo.png" alt=" logo"></a>
+          <a href="/" class="logo"><img src="images1/logo.png" alt=" logo"></a>
           <p>SAFEZONE ACTIVE HUMANITY FOUNDATION</p>
         </div>
         <ul id="navelist">
@@ -51,7 +51,7 @@
               <i class="fa-sharp fa-solid fa-caret-down"></i>
             </a>
             <ul>
-              <li><a href="VISION_MISSION.HTML">VISION & MISSION</a></li>
+              <li><a href="VISION_MISSION.html">VISION & MISSION</a></li>
               <li><a href="MeetOurTeam.html">OUR TEAM</a></li>
               <li><a href="LEGAL.html">LEGAL POLICY</a></li>
             </ul>
